--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-fastapi
-uvicorn
-sqlalchemy
-psycopg2-binary
-sqlalchemy
-alembic
+fastapi==0.68.0
+uvicorn[standard]==0.15.0
+sqlalchemy==1.4.22
+psycopg2-binary==2.9.1
+pydantic==1.8.2
+python-jose[cryptography]==3.3.0
+python-multipart==0.0.5
+alembic==1.6.5
