--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ pydantic==1.8.2
 python-jose[cryptography]==3.3.0
 python-multipart==0.0.5
 alembic==1.6.5
+python-jose[cryptography]
+passlib[bcrypt]
