--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ python-multipart==0.0.5
 alembic==1.6.5
 python-jose[cryptography]
 bcrypt==4.0.1
-passlib[bcrypt]
+passlib[bcrypt]==1.7.4
+psycopg2-binary==2.9.6
